adde and delete imageview

--- a/app/src/main/res/menu/context_menu_1.xml
+++ b/app/src/main/res/menu/context_menu_1.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Item 1"
-        android:id="@+id/menu_1">
+    <item android:title="Zoom +"
+        android:id="@+id/make_bigger">
     </item>
-    <item android:title="Item 2"
-        android:id="@+id/menu_2">
-    </item>
-    <item android:title="Item 3"
-        android:id="@+id/menu_3">
+    <item android:title="Zoom -"
+        android:id="@+id/make_smaller">
     </item>
 </menu>
