--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Settings"
-        android:id="@+id/settings">
+    <item android:title="Add rectangle"
+        android:id="@+id/rect_add">
     </item>
-    <item android:title="Second item"
-        android:id="@+id/second">
-    </item>
-    <item android:title="Home"
-        android:id="@+id/home">
+    <item android:title="Delete rectangle"
+        android:id="@+id/rect_delete">
     </item>
 </menu>
