--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:>
+        android:orientation="vertical">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -22,9 +21,6 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:id="@+id/linear_layout">
-
-
-
         </LinearLayout>
     </LinearLayout>
 
